fix uri parse error on windows remove PublishDiagnostic on some function

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,9 +17,9 @@
 				"targetOS": "Darwin",
 				"outputFile": "",
 				"customOptions": [
-					"-dSYMBOL_DEBUG",
-					//"-dDEBUG",
-					"-dCTDEBUG",
+					//"-dSYMBOL_DEBUG",
+					"-dDEBUG",
+					//"-dCTDEBUG",
 					"-MObjFPC",
 					"-Scaghi",
 					"-CirotR",
@@ -27,6 +27,7 @@
 					"-gw2",
 					"-l",
 					"-Filib/x86_64-darwin",
+					"-Fi/Applications/Lazarus/lcl/include",
 					"-Fu/Applications/Lazarus/components/fpweb/lib/x86_64-darwin",
 					//"-Fu/Applications/Lazarus/components/sqldb/lib/x86_64-darwin/cocoa",
 					"-Fu/Applications/Lazarus/components/ideintf/units/x86_64-darwin/cocoa",
@@ -46,7 +47,7 @@
 					"-Fu/Applications/Lazarus/components/lazutils",
 					"-Fu.",
 					"-FElib/x86_64-darwin",
-					"-o../fpctoolkit/bin/x86_64-drawin/pasls",
+					"-o../fpctoolkit/bin/x86_64-darwin/pasls",
 					"-dLCL",
 					"-dLCLcocoa"
 				]
@@ -56,6 +57,55 @@
 				"kind": "build",
 				"isDefault": true
 			}
+		},
+		{
+			"label": "release",
+			"file": "pasls.lpr",
+			"type": "fpc",
+			"presentation": {
+				"showReuseMessage": false,
+				"clear": true,
+				"revealProblems": "onProblem"
+			},
+			"buildOption": {
+				"unitOutputDir": "./out",
+				"targetCPU": "x86_64",
+				"targetOS": "Darwin",
+				"outputFile": "",
+				"customOptions": [
+					"-MObjFPC",
+					"-Scaghi",
+					"-CirotR",
+					"-XX",
+					"-O2",
+					"-l",
+					"-Filib/x86_64-darwin",
+					"-Fi/Applications/Lazarus/lcl/include",
+					"-Fu/Applications/Lazarus/components/fpweb/lib/x86_64-darwin",
+					//"-Fu/Applications/Lazarus/components/sqldb/lib/x86_64-darwin/cocoa",
+					"-Fu/Applications/Lazarus/components/ideintf/units/x86_64-darwin/cocoa",
+					"-Fu/Applications/Lazarus/components/synedit/units/x86_64-darwin/cocoa",
+					"-Fu/Applications/Lazarus/components/lazcontrols/lib/x86_64-darwin/cocoa",
+					"-Fu/Applications/Lazarus/lcl/units/x86_64-darwin/cocoa",
+					"-Fu/Applications/Lazarus/lcl/units/x86_64-darwin",
+					"-Fu/Applications/Lazarus/lcl",
+					"-Fu/Applications/Lazarus/components/freetype/lib/x86_64-darwin",
+					"-Fu/Applications/Lazarus/components/codetools/units/x86_64-darwin",
+					"-Fu/Applications/Lazarus/components/buildintf/units/x86_64-darwin",
+					"-Fu/Applications/Lazarus/components/lazutils/lib/x86_64-darwin",
+					"-Fu/Applications/Lazarus/packager/units/x86_64-darwin",
+					"-Fi/Applications/Lazarus/components/codetools",
+					"-Fi/Applications/Lazarus/components/lazutils",
+					"-Fu/Applications/Lazarus/components/codetools",
+					"-Fu/Applications/Lazarus/components/lazutils",
+					"-Fu.",
+					"-FElib/x86_64-darwin",
+					"-o../fpctoolkit/bin/x86_64-darwin/pasls",
+					"-dLCL"
+					//"-dLCLcocoa"
+				]
+			},
+			"problemMatcher": [],
 		}
 	],
 	
