--- a/pasls.lpi
+++ b/pasls.lpi
@@ -114,7 +114,7 @@
         <PackageName Value="CodeTools"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="19">
+    <Units Count="20">
       <Unit0>
         <Filename Value="pasls.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -193,6 +193,10 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="SetSelection"/>
       </Unit18>
+      <Unit19>
+        <Filename Value="rename.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit19>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
